fix: jumping page, navbar mooving a bit, image passing over navbar

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -6,12 +6,15 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0px;
+    padding-top: 10px;
     background-color: rgb(255, 255, 255);
+    z-index: 1;
     &__inner {
         &_list {
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
+            margin: 0;
 
             &_item {
                 display: inline-block;
